wip: ltng queue engine + tests
